<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_retry"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list_movie"
        android:background="@color/home_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
    </android.support.v7.widget.RecyclerView>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/pb_loading_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleInverse"
        android:layout_centerInParent="true"/>
</RelativeLayout>
