<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp">
        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc"/>

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_favorite"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_poster"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>